2008-11-12  Jan Schmidt  <jan.schmidt@sun.com>

	* gst/rtp/gstrtpg729pay.c: (gst_rtp_g729_pay_handle_buffer):
	Fix compiler warning about printf formatting.

2008-11-12  Andy Wingo  <wingo@pobox.com>

	* gst/qtdemux/qtdemux.h (struct _GstQTDemux):
	* gst/qtdemux/qtdemux.c (gst_qtdemux_do_seek): Queue up new
	segment events instead of sending them from the seeking thread.
	Fixes #559288.
	(gst_qtdemux_push_pending_newsegment): New helper, sends out
	queued newsegment events.
	(gst_qtdemux_loop_state_movie): Voilà, call it here. Only need to
	call it here, as we only seek when looping, and only push in the
	movie state.

2008-11-11  Mark Nauwelaerts  <mark.nauwelaerts@collabora.co.uk>

	* gst/qtdemux/qtdemux.c: (qtdemux_tag_add_tmpo),
	(qtdemux_tag_add_covr), (qtdemux_parse_udta):
	* gst/qtdemux/qtdemux_fourcc.h:
	* gst/qtdemux/qtdemux_types.c:
	Add cover and alternative copyright tag, and enhance some existing
	ones by marking them as container atoms.

2008-11-11  Wim Taymans  <wim.taymans@collabora.co.uk>

	* gst/rtp/gstrtpg729pay.c: (gst_rtp_g729_pay_set_caps):
	Don't ignore the return value of setcaps.

2008-11-11  Wim Taymans  <wim.taymans@collabora.co.uk>

	Patch by: Olivier Crete <tester at tester dot ca>

	* gst/rtp/gstrtpg729pay.c: (gst_rtp_g729_pay_base_init),
	(gst_rtp_g729_pay_class_init), (gst_rtp_g729_pay_init),
	(gst_rtp_g729_pay_set_caps), (gst_rtp_g729_pay_handle_buffer):
	* gst/rtp/gstrtpg729pay.h:
	Replace G729 payloader with an improved version. Fixes #532409.

2008-11-11  Wim Taymans  <wim.taymans@collabora.co.uk>

	* gst/rtsp/gstrtspsrc.c: (gst_rtspsrc_create_transports_string),
	(gst_rtspsrc_change_state):
	Only send one transport at a time for improved compatibility with some
	broken servers. See #537832.

2008-11-11  Wim Taymans  <wim.taymans@collabora.co.uk>

	* gst/rtsp/gstrtspsrc.c: (gst_rtspsrc_do_seek),
	(gst_rtspsrc_perform_seek):
	Only pause/play in the seek handler when the source was playing.
	Fixes #529379.
