@@ -1,3 +1,10 @@
+2008-11-13  Wim Taymans  <wim.taymans@collabora.co.uk>
+
+	Patch by: Yotam <sh dot yotam at gmail dot com>
+
+	* gst/rtp/gstrtpmp4vpay.c: (gst_rtp_mp4v_pay_event):
+	Flush the remaining frames on EOS. Fixes #560641.
+
 2008-11-12  Jan Schmidt  <jan.schmidt@sun.com>
 
 	* gst/rtp/gstrtpg729pay.c: (gst_rtp_g729_pay_handle_buffer):
